parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> algorithm
Rule 1     algorithm -> algorithm algorithm_function
Rule 2     algorithm -> empty
Rule 3     algorithm_function -> method_def
Rule 4     algorithm_function -> function_def
Rule 5     var_type -> BOOLEAN_TXT
Rule 6     var_type -> INTEGER_TXT
Rule 7     function_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P ARROW var_type SB1 statement SB2
Rule 8     method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2
Rule 9     parameters -> parameters COMMA parameters
Rule 10    parameters -> VARIABLE
Rule 11    parameters -> empty
Rule 12    operator -> PLUS
Rule 13    operator -> MINUS
Rule 14    operator -> INT_DIV
Rule 15    operator -> DIVIDE
Rule 16    operator -> EXP
Rule 17    operator -> MULTIPLY
Rule 18    fingers -> THUMB
Rule 19    fingers -> INDEX
Rule 20    fingers -> MIDDLE
Rule 21    fingers -> ANULAR
Rule 22    fingers -> PINKY
Rule 23    fingers -> ALL
Rule 24    fingerL_A -> SQ1 fingers COMMA fingerL_B
Rule 25    fingerL_B -> fingers COMMA fingerL_B
Rule 26    fingerL_B -> fingerL_C
Rule 27    fingerL_C -> fingers SQ2
Rule 28    fingerL_C -> empty
Rule 29    hand -> fingerL_A fingerL_B fingerL_C
Rule 30    function_move -> MOVE OPEN_P fingers COMMA BOOLEAN CLOSE_P
Rule 31    function_move -> MOVE OPEN_P fingers COMMA VARIABLE CLOSE_P
Rule 32    function_move -> MOVE OPEN_P hand COMMA BOOLEAN CLOSE_P
Rule 33    function_move -> MOVE OPEN_P hand COMMA VARIABLE CLOSE_P
Rule 34    stringL_A -> STR COMMA stringL_B
Rule 35    stringL_A -> VARIABLE COMMA stringL_B
Rule 36    stringL_A -> BOOLEAN COMMA stringL_B
Rule 37    stringL_A -> INT COMMA stringL_B
Rule 38    stringL_B -> STR COMMA stringL_B
Rule 39    stringL_B -> VARIABLE COMMA stringL_B
Rule 40    stringL_B -> INT COMMA stringL_B
Rule 41    stringL_B -> BOOLEAN COMMA stringL_B
Rule 42    stringL_B -> stringL_C
Rule 43    stringL_C -> STR
Rule 44    stringL_C -> VARIABLE
Rule 45    stringL_C -> BOOLEAN
Rule 46    stringL_C -> INT
Rule 47    stringL_C -> empty
Rule 48    Cstring -> stringL_A stringL_B stringL_C
Rule 49    function_print -> PRINT OPEN_P STR CLOSE_P
Rule 50    function_print -> PRINT OPEN_P VARIABLE CLOSE_P
Rule 51    function_print -> PRINT OPEN_P BOOLEAN CLOSE_P
Rule 52    function_print -> PRINT OPEN_P INT CLOSE_P
Rule 53    function_print -> PRINT OPEN_P Cstring CLOSE_P
Rule 54    expression -> OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
Rule 55    bool_operator -> EQUALS_EQUALS
Rule 56    bool_operator -> DISTINCT
Rule 57    bool_operator -> LESS_EQUAL
Rule 58    bool_operator -> MORE_EQUAL
Rule 59    bool_operator -> MORE_THAN
Rule 60    bool_operator -> LESS_THAN
Rule 61    expression -> expression bool_operator expression
Rule 62    var_assign -> LET VARIABLE EQUALS expression
Rule 63    for_loop -> FOR INT IN INT dDOT INT SB1 statement SB2
Rule 64    for_loop -> FOR VARIABLE IN INT dDOT INT SB1 statement SB2
Rule 65    for_loop -> FOR INT IN INT dDOT_E INT SB1 statement SB2
Rule 66    for_loop -> FOR VARIABLE IN INT dDOT_E INT SB1 statement SB2
Rule 67    if_else -> IF expression SB1 statement SB2 else_if
Rule 68    else_if -> ELSE IF expression SB1 statement SB2 else_if
Rule 69    else_if -> else_exp
Rule 70    else_exp -> ELSE SB1 statement SB2
Rule 71    else_exp -> empty
Rule 72    statement -> statement statement_line
Rule 73    statement -> empty
Rule 74    statement_line -> if_else
Rule 75    statement_line -> expression PyC
Rule 76    statement_line -> var_assign PyC
Rule 77    statement_line -> for_loop
Rule 78    statement_line -> while_loop
Rule 79    statement_line -> function_move PyC
Rule 80    statement_line -> function_delay PyC
Rule 81    statement_line -> function_print PyC
Rule 82    time_param -> SEG
Rule 83    time_param -> MIL
Rule 84    time_param -> MIN
Rule 85    function_delay -> DELAY OPEN_P INT COMMA time_param CLOSE_P
Rule 86    statement_line -> RETURN expression PyC
Rule 87    while_loop -> WHILE OPEN_P expression CLOSE_P SB1 statement SB2
Rule 88    empty -> <empty>
Rule 89    expression -> INT
Rule 90    expression -> BOOLEAN
Rule 91    expression -> function_call
Rule 92    expression -> VARIABLE
Rule 93    function_call -> VARIABLE OPEN_P param_expressions CLOSE_P
Rule 94    param_expressions -> param_expressions COMMA param_expressions
Rule 95    param_expressions -> expression
Rule 96    param_expressions -> empty

Terminals, with rules where they appear

ALL                  : 23
ANULAR               : 21
ARROW                : 7
BOOLEAN              : 30 32 36 41 45 51 90
BOOLEAN_TXT          : 5
CLOSE_P              : 7 8 30 31 32 33 49 50 51 52 53 54 85 87 93
COMMA                : 9 24 25 30 31 32 33 34 35 36 37 38 39 40 41 54 54 85 94
DELAY                : 85
DISTINCT             : 56
DIVIDE               : 15
ELSE                 : 68 70
EQUALS               : 62
EQUALS_EQUALS        : 55
EXP                  : 16
FOR                  : 63 64 65 66
FUNCTION             : 7 8
IF                   : 67 68
IN                   : 63 64 65 66
INDEX                : 19
INT                  : 37 40 46 52 63 63 63 64 64 65 65 65 66 66 85 89
INTEGER_TXT          : 6
INT_DIV              : 14
LESS_EQUAL           : 57
LESS_THAN            : 60
LET                  : 62
MIDDLE               : 20
MIL                  : 83
MIN                  : 84
MINUS                : 13
MORE_EQUAL           : 58
MORE_THAN            : 59
MOVE                 : 30 31 32 33
MULTIPLY             : 17
OPEN_P               : 7 8 30 31 32 33 49 50 51 52 53 54 85 87 93
OPERA                : 54
PINKY                : 22
PLUS                 : 12
PRINT                : 49 50 51 52 53
PyC                  : 75 76 79 80 81 86
RETURN               : 86
SB1                  : 7 8 63 64 65 66 67 68 70 87
SB2                  : 7 8 63 64 65 66 67 68 70 87
SEG                  : 82
SQ1                  : 24
SQ2                  : 27
STR                  : 34 38 43 49
THUMB                : 18
VARIABLE             : 7 8 10 31 33 35 39 44 50 62 64 66 92 93
WHILE                : 87
dDOT                 : 63 64
dDOT_E               : 65 66
error                : 

Nonterminals, with rules where they appear

Cstring              : 53
algorithm            : 1 0
algorithm_function   : 1
bool_operator        : 61
else_exp             : 69
else_if              : 67 68
empty                : 2 11 28 47 71 73 96
expression           : 54 54 61 61 62 67 68 75 86 87 95
fingerL_A            : 29
fingerL_B            : 24 25 29
fingerL_C            : 26 29
fingers              : 24 25 27 30 31
for_loop             : 77
function_call        : 91
function_def         : 4
function_delay       : 80
function_move        : 79
function_print       : 81
hand                 : 32 33
if_else              : 74
method_def           : 3
operator             : 54
param_expressions    : 93 94 94
parameters           : 7 8 9 9
statement            : 7 8 63 64 65 66 67 68 70 72 87
statement_line       : 72
stringL_A            : 48
stringL_B            : 34 35 36 37 38 39 40 41 48
stringL_C            : 42 48
time_param           : 85
var_assign           : 76
var_type             : 7
while_loop           : 78

Parsing method: LALR

state 0

    (0) S' -> . algorithm
    (1) algorithm -> . algorithm algorithm_function
    (2) algorithm -> . empty
    (88) empty -> .

    FUNCTION        reduce using rule 88 (empty -> .)
    $end            reduce using rule 88 (empty -> .)

    algorithm                      shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> algorithm .
    (1) algorithm -> algorithm . algorithm_function
    (3) algorithm_function -> . method_def
    (4) algorithm_function -> . function_def
    (8) method_def -> . FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2
    (7) function_def -> . FUNCTION VARIABLE OPEN_P parameters CLOSE_P ARROW var_type SB1 statement SB2

    FUNCTION        shift and go to state 6

    algorithm_function             shift and go to state 3
    method_def                     shift and go to state 4
    function_def                   shift and go to state 5

state 2

    (2) algorithm -> empty .

    FUNCTION        reduce using rule 2 (algorithm -> empty .)
    $end            reduce using rule 2 (algorithm -> empty .)


state 3

    (1) algorithm -> algorithm algorithm_function .

    FUNCTION        reduce using rule 1 (algorithm -> algorithm algorithm_function .)
    $end            reduce using rule 1 (algorithm -> algorithm algorithm_function .)


state 4

    (3) algorithm_function -> method_def .

    FUNCTION        reduce using rule 3 (algorithm_function -> method_def .)
    $end            reduce using rule 3 (algorithm_function -> method_def .)


state 5

    (4) algorithm_function -> function_def .

    FUNCTION        reduce using rule 4 (algorithm_function -> function_def .)
    $end            reduce using rule 4 (algorithm_function -> function_def .)


state 6

    (8) method_def -> FUNCTION . VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2
    (7) function_def -> FUNCTION . VARIABLE OPEN_P parameters CLOSE_P ARROW var_type SB1 statement SB2

    VARIABLE        shift and go to state 7


state 7

    (8) method_def -> FUNCTION VARIABLE . OPEN_P parameters CLOSE_P SB1 statement SB2
    (7) function_def -> FUNCTION VARIABLE . OPEN_P parameters CLOSE_P ARROW var_type SB1 statement SB2

    OPEN_P          shift and go to state 8


state 8

    (8) method_def -> FUNCTION VARIABLE OPEN_P . parameters CLOSE_P SB1 statement SB2
    (7) function_def -> FUNCTION VARIABLE OPEN_P . parameters CLOSE_P ARROW var_type SB1 statement SB2
    (9) parameters -> . parameters COMMA parameters
    (10) parameters -> . VARIABLE
    (11) parameters -> . empty
    (88) empty -> .

    VARIABLE        shift and go to state 9
    CLOSE_P         reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)

    parameters                     shift and go to state 10
    empty                          shift and go to state 11

state 9

    (10) parameters -> VARIABLE .

    CLOSE_P         reduce using rule 10 (parameters -> VARIABLE .)
    COMMA           reduce using rule 10 (parameters -> VARIABLE .)


state 10

    (8) method_def -> FUNCTION VARIABLE OPEN_P parameters . CLOSE_P SB1 statement SB2
    (7) function_def -> FUNCTION VARIABLE OPEN_P parameters . CLOSE_P ARROW var_type SB1 statement SB2
    (9) parameters -> parameters . COMMA parameters

    CLOSE_P         shift and go to state 12
    COMMA           shift and go to state 13


state 11

    (11) parameters -> empty .

    CLOSE_P         reduce using rule 11 (parameters -> empty .)
    COMMA           reduce using rule 11 (parameters -> empty .)


state 12

    (8) method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P . SB1 statement SB2
    (7) function_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P . ARROW var_type SB1 statement SB2

    SB1             shift and go to state 14
    ARROW           shift and go to state 15


state 13

    (9) parameters -> parameters COMMA . parameters
    (9) parameters -> . parameters COMMA parameters
    (10) parameters -> . VARIABLE
    (11) parameters -> . empty
    (88) empty -> .

    VARIABLE        shift and go to state 9
    COMMA           reduce using rule 88 (empty -> .)
    CLOSE_P         reduce using rule 88 (empty -> .)

    parameters                     shift and go to state 16
    empty                          shift and go to state 11

state 14

    (8) method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 . statement SB2
    (72) statement -> . statement statement_line
    (73) statement -> . empty
    (88) empty -> .

    SB2             reduce using rule 88 (empty -> .)
    RETURN          reduce using rule 88 (empty -> .)
    IF              reduce using rule 88 (empty -> .)
    OPERA           reduce using rule 88 (empty -> .)
    INT             reduce using rule 88 (empty -> .)
    BOOLEAN         reduce using rule 88 (empty -> .)
    VARIABLE        reduce using rule 88 (empty -> .)
    LET             reduce using rule 88 (empty -> .)
    FOR             reduce using rule 88 (empty -> .)
    WHILE           reduce using rule 88 (empty -> .)
    MOVE            reduce using rule 88 (empty -> .)
    DELAY           reduce using rule 88 (empty -> .)
    PRINT           reduce using rule 88 (empty -> .)

    statement                      shift and go to state 17
    empty                          shift and go to state 18

state 15

    (7) function_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P ARROW . var_type SB1 statement SB2
    (5) var_type -> . BOOLEAN_TXT
    (6) var_type -> . INTEGER_TXT

    BOOLEAN_TXT     shift and go to state 20
    INTEGER_TXT     shift and go to state 21

    var_type                       shift and go to state 19

state 16

    (9) parameters -> parameters COMMA parameters .
    (9) parameters -> parameters . COMMA parameters

  ! shift/reduce conflict for COMMA resolved as shift
    CLOSE_P         reduce using rule 9 (parameters -> parameters COMMA parameters .)
    COMMA           shift and go to state 13

  ! COMMA           [ reduce using rule 9 (parameters -> parameters COMMA parameters .) ]


state 17

    (8) method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement . SB2
    (72) statement -> statement . statement_line
    (74) statement_line -> . if_else
    (75) statement_line -> . expression PyC
    (76) statement_line -> . var_assign PyC
    (77) statement_line -> . for_loop
    (78) statement_line -> . while_loop
    (79) statement_line -> . function_move PyC
    (80) statement_line -> . function_delay PyC
    (81) statement_line -> . function_print PyC
    (86) statement_line -> . RETURN expression PyC
    (67) if_else -> . IF expression SB1 statement SB2 else_if
    (54) expression -> . OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
    (61) expression -> . expression bool_operator expression
    (89) expression -> . INT
    (90) expression -> . BOOLEAN
    (91) expression -> . function_call
    (92) expression -> . VARIABLE
    (62) var_assign -> . LET VARIABLE EQUALS expression
    (63) for_loop -> . FOR INT IN INT dDOT INT SB1 statement SB2
    (64) for_loop -> . FOR VARIABLE IN INT dDOT INT SB1 statement SB2
    (65) for_loop -> . FOR INT IN INT dDOT_E INT SB1 statement SB2
    (66) for_loop -> . FOR VARIABLE IN INT dDOT_E INT SB1 statement SB2
    (87) while_loop -> . WHILE OPEN_P expression CLOSE_P SB1 statement SB2
    (30) function_move -> . MOVE OPEN_P fingers COMMA BOOLEAN CLOSE_P
    (31) function_move -> . MOVE OPEN_P fingers COMMA VARIABLE CLOSE_P
    (32) function_move -> . MOVE OPEN_P hand COMMA BOOLEAN CLOSE_P
    (33) function_move -> . MOVE OPEN_P hand COMMA VARIABLE CLOSE_P
    (85) function_delay -> . DELAY OPEN_P INT COMMA time_param CLOSE_P
    (49) function_print -> . PRINT OPEN_P STR CLOSE_P
    (50) function_print -> . PRINT OPEN_P VARIABLE CLOSE_P
    (51) function_print -> . PRINT OPEN_P BOOLEAN CLOSE_P
    (52) function_print -> . PRINT OPEN_P INT CLOSE_P
    (53) function_print -> . PRINT OPEN_P Cstring CLOSE_P
    (93) function_call -> . VARIABLE OPEN_P param_expressions CLOSE_P

    SB2             shift and go to state 23
    RETURN          shift and go to state 33
    IF              shift and go to state 34
    OPERA           shift and go to state 35
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 37
    VARIABLE        shift and go to state 22
    LET             shift and go to state 39
    FOR             shift and go to state 40
    WHILE           shift and go to state 41
    MOVE            shift and go to state 42
    DELAY           shift and go to state 43
    PRINT           shift and go to state 44

    statement_line                 shift and go to state 24
    if_else                        shift and go to state 25
    expression                     shift and go to state 26
    var_assign                     shift and go to state 27
    for_loop                       shift and go to state 28
    while_loop                     shift and go to state 29
    function_move                  shift and go to state 30
    function_delay                 shift and go to state 31
    function_print                 shift and go to state 32
    function_call                  shift and go to state 38

state 18

    (73) statement -> empty .

    SB2             reduce using rule 73 (statement -> empty .)
    RETURN          reduce using rule 73 (statement -> empty .)
    IF              reduce using rule 73 (statement -> empty .)
    OPERA           reduce using rule 73 (statement -> empty .)
    INT             reduce using rule 73 (statement -> empty .)
    BOOLEAN         reduce using rule 73 (statement -> empty .)
    VARIABLE        reduce using rule 73 (statement -> empty .)
    LET             reduce using rule 73 (statement -> empty .)
    FOR             reduce using rule 73 (statement -> empty .)
    WHILE           reduce using rule 73 (statement -> empty .)
    MOVE            reduce using rule 73 (statement -> empty .)
    DELAY           reduce using rule 73 (statement -> empty .)
    PRINT           reduce using rule 73 (statement -> empty .)


state 19

    (7) function_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P ARROW var_type . SB1 statement SB2

    SB1             shift and go to state 45


state 20

    (5) var_type -> BOOLEAN_TXT .

    SB1             reduce using rule 5 (var_type -> BOOLEAN_TXT .)


state 21

    (6) var_type -> INTEGER_TXT .

    SB1             reduce using rule 6 (var_type -> INTEGER_TXT .)


state 22

    (92) expression -> VARIABLE .
    (93) function_call -> VARIABLE . OPEN_P param_expressions CLOSE_P

    PyC             reduce using rule 92 (expression -> VARIABLE .)
    EQUALS_EQUALS   reduce using rule 92 (expression -> VARIABLE .)
    DISTINCT        reduce using rule 92 (expression -> VARIABLE .)
    LESS_EQUAL      reduce using rule 92 (expression -> VARIABLE .)
    MORE_EQUAL      reduce using rule 92 (expression -> VARIABLE .)
    MORE_THAN       reduce using rule 92 (expression -> VARIABLE .)
    LESS_THAN       reduce using rule 92 (expression -> VARIABLE .)
    SB1             reduce using rule 92 (expression -> VARIABLE .)
    CLOSE_P         reduce using rule 92 (expression -> VARIABLE .)
    COMMA           reduce using rule 92 (expression -> VARIABLE .)
    OPEN_P          shift and go to state 46


state 23

    (8) method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2 .

    FUNCTION        reduce using rule 8 (method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2 .)
    $end            reduce using rule 8 (method_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P SB1 statement SB2 .)


state 24

    (72) statement -> statement statement_line .

    SB2             reduce using rule 72 (statement -> statement statement_line .)
    RETURN          reduce using rule 72 (statement -> statement statement_line .)
    IF              reduce using rule 72 (statement -> statement statement_line .)
    OPERA           reduce using rule 72 (statement -> statement statement_line .)
    INT             reduce using rule 72 (statement -> statement statement_line .)
    BOOLEAN         reduce using rule 72 (statement -> statement statement_line .)
    VARIABLE        reduce using rule 72 (statement -> statement statement_line .)
    LET             reduce using rule 72 (statement -> statement statement_line .)
    FOR             reduce using rule 72 (statement -> statement statement_line .)
    WHILE           reduce using rule 72 (statement -> statement statement_line .)
    MOVE            reduce using rule 72 (statement -> statement statement_line .)
    DELAY           reduce using rule 72 (statement -> statement statement_line .)
    PRINT           reduce using rule 72 (statement -> statement statement_line .)


state 25

    (74) statement_line -> if_else .

    SB2             reduce using rule 74 (statement_line -> if_else .)
    RETURN          reduce using rule 74 (statement_line -> if_else .)
    IF              reduce using rule 74 (statement_line -> if_else .)
    OPERA           reduce using rule 74 (statement_line -> if_else .)
    INT             reduce using rule 74 (statement_line -> if_else .)
    BOOLEAN         reduce using rule 74 (statement_line -> if_else .)
    VARIABLE        reduce using rule 74 (statement_line -> if_else .)
    LET             reduce using rule 74 (statement_line -> if_else .)
    FOR             reduce using rule 74 (statement_line -> if_else .)
    WHILE           reduce using rule 74 (statement_line -> if_else .)
    MOVE            reduce using rule 74 (statement_line -> if_else .)
    DELAY           reduce using rule 74 (statement_line -> if_else .)
    PRINT           reduce using rule 74 (statement_line -> if_else .)


state 26

    (75) statement_line -> expression . PyC
    (61) expression -> expression . bool_operator expression
    (55) bool_operator -> . EQUALS_EQUALS
    (56) bool_operator -> . DISTINCT
    (57) bool_operator -> . LESS_EQUAL
    (58) bool_operator -> . MORE_EQUAL
    (59) bool_operator -> . MORE_THAN
    (60) bool_operator -> . LESS_THAN

    PyC             shift and go to state 47
    EQUALS_EQUALS   shift and go to state 49
    DISTINCT        shift and go to state 50
    LESS_EQUAL      shift and go to state 51
    MORE_EQUAL      shift and go to state 52
    MORE_THAN       shift and go to state 53
    LESS_THAN       shift and go to state 54

    bool_operator                  shift and go to state 48

state 27

    (76) statement_line -> var_assign . PyC

    PyC             shift and go to state 55


state 28

    (77) statement_line -> for_loop .

    SB2             reduce using rule 77 (statement_line -> for_loop .)
    RETURN          reduce using rule 77 (statement_line -> for_loop .)
    IF              reduce using rule 77 (statement_line -> for_loop .)
    OPERA           reduce using rule 77 (statement_line -> for_loop .)
    INT             reduce using rule 77 (statement_line -> for_loop .)
    BOOLEAN         reduce using rule 77 (statement_line -> for_loop .)
    VARIABLE        reduce using rule 77 (statement_line -> for_loop .)
    LET             reduce using rule 77 (statement_line -> for_loop .)
    FOR             reduce using rule 77 (statement_line -> for_loop .)
    WHILE           reduce using rule 77 (statement_line -> for_loop .)
    MOVE            reduce using rule 77 (statement_line -> for_loop .)
    DELAY           reduce using rule 77 (statement_line -> for_loop .)
    PRINT           reduce using rule 77 (statement_line -> for_loop .)


state 29

    (78) statement_line -> while_loop .

    SB2             reduce using rule 78 (statement_line -> while_loop .)
    RETURN          reduce using rule 78 (statement_line -> while_loop .)
    IF              reduce using rule 78 (statement_line -> while_loop .)
    OPERA           reduce using rule 78 (statement_line -> while_loop .)
    INT             reduce using rule 78 (statement_line -> while_loop .)
    BOOLEAN         reduce using rule 78 (statement_line -> while_loop .)
    VARIABLE        reduce using rule 78 (statement_line -> while_loop .)
    LET             reduce using rule 78 (statement_line -> while_loop .)
    FOR             reduce using rule 78 (statement_line -> while_loop .)
    WHILE           reduce using rule 78 (statement_line -> while_loop .)
    MOVE            reduce using rule 78 (statement_line -> while_loop .)
    DELAY           reduce using rule 78 (statement_line -> while_loop .)
    PRINT           reduce using rule 78 (statement_line -> while_loop .)


state 30

    (79) statement_line -> function_move . PyC

    PyC             shift and go to state 56


state 31

    (80) statement_line -> function_delay . PyC

    PyC             shift and go to state 57


state 32

    (81) statement_line -> function_print . PyC

    PyC             shift and go to state 58


state 33

    (86) statement_line -> RETURN . expression PyC
    (54) expression -> . OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
    (61) expression -> . expression bool_operator expression
    (89) expression -> . INT
    (90) expression -> . BOOLEAN
    (91) expression -> . function_call
    (92) expression -> . VARIABLE
    (93) function_call -> . VARIABLE OPEN_P param_expressions CLOSE_P

    OPERA           shift and go to state 35
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 37
    VARIABLE        shift and go to state 22

    expression                     shift and go to state 59
    function_call                  shift and go to state 38

state 34

    (67) if_else -> IF . expression SB1 statement SB2 else_if
    (54) expression -> . OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
    (61) expression -> . expression bool_operator expression
    (89) expression -> . INT
    (90) expression -> . BOOLEAN
    (91) expression -> . function_call
    (92) expression -> . VARIABLE
    (93) function_call -> . VARIABLE OPEN_P param_expressions CLOSE_P

    OPERA           shift and go to state 35
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 37
    VARIABLE        shift and go to state 22

    expression                     shift and go to state 60
    function_call                  shift and go to state 38

state 35

    (54) expression -> OPERA . OPEN_P operator COMMA expression COMMA expression CLOSE_P

    OPEN_P          shift and go to state 61


state 36

    (89) expression -> INT .

    PyC             reduce using rule 89 (expression -> INT .)
    EQUALS_EQUALS   reduce using rule 89 (expression -> INT .)
    DISTINCT        reduce using rule 89 (expression -> INT .)
    LESS_EQUAL      reduce using rule 89 (expression -> INT .)
    MORE_EQUAL      reduce using rule 89 (expression -> INT .)
    MORE_THAN       reduce using rule 89 (expression -> INT .)
    LESS_THAN       reduce using rule 89 (expression -> INT .)
    SB1             reduce using rule 89 (expression -> INT .)
    CLOSE_P         reduce using rule 89 (expression -> INT .)
    COMMA           reduce using rule 89 (expression -> INT .)


state 37

    (90) expression -> BOOLEAN .

    PyC             reduce using rule 90 (expression -> BOOLEAN .)
    EQUALS_EQUALS   reduce using rule 90 (expression -> BOOLEAN .)
    DISTINCT        reduce using rule 90 (expression -> BOOLEAN .)
    LESS_EQUAL      reduce using rule 90 (expression -> BOOLEAN .)
    MORE_EQUAL      reduce using rule 90 (expression -> BOOLEAN .)
    MORE_THAN       reduce using rule 90 (expression -> BOOLEAN .)
    LESS_THAN       reduce using rule 90 (expression -> BOOLEAN .)
    SB1             reduce using rule 90 (expression -> BOOLEAN .)
    CLOSE_P         reduce using rule 90 (expression -> BOOLEAN .)
    COMMA           reduce using rule 90 (expression -> BOOLEAN .)


state 38

    (91) expression -> function_call .

    PyC             reduce using rule 91 (expression -> function_call .)
    EQUALS_EQUALS   reduce using rule 91 (expression -> function_call .)
    DISTINCT        reduce using rule 91 (expression -> function_call .)
    LESS_EQUAL      reduce using rule 91 (expression -> function_call .)
    MORE_EQUAL      reduce using rule 91 (expression -> function_call .)
    MORE_THAN       reduce using rule 91 (expression -> function_call .)
    LESS_THAN       reduce using rule 91 (expression -> function_call .)
    SB1             reduce using rule 91 (expression -> function_call .)
    CLOSE_P         reduce using rule 91 (expression -> function_call .)
    COMMA           reduce using rule 91 (expression -> function_call .)


state 39

    (62) var_assign -> LET . VARIABLE EQUALS expression

    VARIABLE        shift and go to state 62


state 40

    (63) for_loop -> FOR . INT IN INT dDOT INT SB1 statement SB2
    (64) for_loop -> FOR . VARIABLE IN INT dDOT INT SB1 statement SB2
    (65) for_loop -> FOR . INT IN INT dDOT_E INT SB1 statement SB2
    (66) for_loop -> FOR . VARIABLE IN INT dDOT_E INT SB1 statement SB2

    INT             shift and go to state 63
    VARIABLE        shift and go to state 64


state 41

    (87) while_loop -> WHILE . OPEN_P expression CLOSE_P SB1 statement SB2

    OPEN_P          shift and go to state 65


state 42

    (30) function_move -> MOVE . OPEN_P fingers COMMA BOOLEAN CLOSE_P
    (31) function_move -> MOVE . OPEN_P fingers COMMA VARIABLE CLOSE_P
    (32) function_move -> MOVE . OPEN_P hand COMMA BOOLEAN CLOSE_P
    (33) function_move -> MOVE . OPEN_P hand COMMA VARIABLE CLOSE_P

    OPEN_P          shift and go to state 66


state 43

    (85) function_delay -> DELAY . OPEN_P INT COMMA time_param CLOSE_P

    OPEN_P          shift and go to state 67


state 44

    (49) function_print -> PRINT . OPEN_P STR CLOSE_P
    (50) function_print -> PRINT . OPEN_P VARIABLE CLOSE_P
    (51) function_print -> PRINT . OPEN_P BOOLEAN CLOSE_P
    (52) function_print -> PRINT . OPEN_P INT CLOSE_P
    (53) function_print -> PRINT . OPEN_P Cstring CLOSE_P

    OPEN_P          shift and go to state 68


state 45

    (7) function_def -> FUNCTION VARIABLE OPEN_P parameters CLOSE_P ARROW var_type SB1 . statement SB2
    (72) statement -> . statement statement_line
    (73) statement -> . empty
    (88) empty -> .

    SB2             reduce using rule 88 (empty -> .)
    RETURN          reduce using rule 88 (empty -> .)
    IF              reduce using rule 88 (empty -> .)
    OPERA           reduce using rule 88 (empty -> .)
    INT             reduce using rule 88 (empty -> .)
    BOOLEAN         reduce using rule 88 (empty -> .)
    VARIABLE        reduce using rule 88 (empty -> .)
    LET             reduce using rule 88 (empty -> .)
    FOR             reduce using rule 88 (empty -> .)
    WHILE           reduce using rule 88 (empty -> .)
    MOVE            reduce using rule 88 (empty -> .)
    DELAY           reduce using rule 88 (empty -> .)
    PRINT           reduce using rule 88 (empty -> .)

    statement                      shift and go to state 69
    empty                          shift and go to state 18

state 46

    (93) function_call -> VARIABLE OPEN_P . param_expressions CLOSE_P
    (94) param_expressions -> . param_expressions COMMA param_expressions
    (95) param_expressions -> . expression
    (96) param_expressions -> . empty
    (54) expression -> . OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
    (61) expression -> . expression bool_operator expression
    (89) expression -> . INT
    (90) expression -> . BOOLEAN
    (91) expression -> . function_call
    (92) expression -> . VARIABLE
    (88) empty -> .
    (93) function_call -> . VARIABLE OPEN_P param_expressions CLOSE_P

    OPERA           shift and go to state 35
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 37
    VARIABLE        shift and go to state 22
    CLOSE_P         reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)

    param_expressions              shift and go to state 70
    expression                     shift and go to state 71
    empty                          shift and go to state 72
    function_call                  shift and go to state 38

state 47

    (75) statement_line -> expression PyC .

    SB2             reduce using rule 75 (statement_line -> expression PyC .)
    RETURN          reduce using rule 75 (statement_line -> expression PyC .)
    IF              reduce using rule 75 (statement_line -> expression PyC .)
    OPERA           reduce using rule 75 (statement_line -> expression PyC .)
    INT             reduce using rule 75 (statement_line -> expression PyC .)
    BOOLEAN         reduce using rule 75 (statement_line -> expression PyC .)
    VARIABLE        reduce using rule 75 (statement_line -> expression PyC .)
    LET             reduce using rule 75 (statement_line -> expression PyC .)
    FOR             reduce using rule 75 (statement_line -> expression PyC .)
    WHILE           reduce using rule 75 (statement_line -> expression PyC .)
    MOVE            reduce using rule 75 (statement_line -> expression PyC .)
    DELAY           reduce using rule 75 (statement_line -> expression PyC .)
    PRINT           reduce using rule 75 (statement_line -> expression PyC .)


state 48

    (61) expression -> expression bool_operator . expression
    (54) expression -> . OPERA OPEN_P operator COMMA expression COMMA expression CLOSE_P
    (61) expression -> . expression bool_operator expression
    (89) expression -> . INT
    (90) expression -> . BOOLEAN
    (91) expression -> . function_call
    (92) expression -> . VARIABLE
    (93) function_call -> . VARIABLE OPEN_P param_expressions CLOSE_P

    OPERA           shift and go to state 35
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 37
    VARIABLE        shift and go to state 22

    expression                     shift and go to state 73
    function_call                  shift and go to state 38

state 49

    (55) bool_operator -> EQUALS_EQUALS .

    OPERA           reduce using rule 55 (bool_operator -> EQUALS_EQUALS .)
    INT             reduce using rule 55 (bool_operator -> EQUALS_EQUALS .)
    BOOLEAN         reduce using rule 55 (bool_operator -> EQUALS_EQUALS .)
    VARIABLE        reduce using rule 55 (bool_operator -> EQUALS_EQUALS .)


state 50

    (56) bool_operator -> DISTINCT .

    OPERA           reduce using rule 56 (bool_operator -> DISTINCT .)
    INT             reduce using rule 56 (bool_operator -> DISTINCT .)
    BOOLEAN         reduce using rule 56 (bool_operator -> DISTINCT .)
